# internal/api/routes.go
@@ -17,6 +17,7 @@ func SetupRoutes(app *app.APIApp) http.Handler {
 	mux.HandleFunc("GET /api/hyperliquid/whale-position", requireAPIKey(hyperliquidAPI.WhalePosition))
 	mux.HandleFunc("GET /api/hyperliquid/position", requireAPIKey(hyperliquidAPI.Position))
 	mux.HandleFunc("GET /api/hyperliquid/user-position", requireAPIKey(hyperliquidAPI.UserPosition))
+	mux.HandleFunc("GET /api/hyperliquid/wallet/overview", requireAPIKey(hyperliquidAPI.WalletOverview))
 	mux.HandleFunc("GET /api/hyperliquid/wallets", requireAPIKey(hyperliquidAPI.Wallets))
 	mux.HandleFunc("GET /api/hyperliquid/wallet/position-distribution", requireAPIKey(hyperliquidAPI.WalletPositionDistribution))
 	mux.HandleFunc("GET /api/hyperliquid/wallet/pnl-distribution", requireAPIKey(hyperliquidAPI.WalletPnLDistribution))
